test_suite/compile-test/tests/ui/enum_derive/variant.stderr
error: an enum with units variant is not supported
 --> $DIR/variant.rs:9:5
  |
9 |     A,
  |     ^

error: an enum with discriminants is not supported
  --> $DIR/variant.rs:15:9
   |
15 |     A = 2,
   |         ^

error: an enum with named fields variant is not supported
  --> $DIR/variant.rs:21:5
   |
21 |     A { x: A },
   |     ^^^^^^^^^^

error: a variant with zero fields is not supported
  --> $DIR/variant.rs:27:6
   |
27 |     A(),
   |      ^^

error: a variant with multiple fields is not supported
  --> $DIR/variant.rs:34:6
   |
34 |     B(A, B),
   |      ^^^^^^

error: cannot be implemented for enums with less than two variants
  --> $DIR/variant.rs:38:1
   |
38 | / enum Enum7<A> {
39 | |     A(A),
40 | | }
   | |_^

error: cannot be implemented for enums with less than two variants
  --> $DIR/variant.rs:43:1
   |
43 | enum Enum8 {}
   | ^^^^^^^^^^^^^

error: aborting due to 7 previous errors

